Azure init/ManualDeployApp/grafana-ingress-certmanager-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-dev"

spec:
  tls:
  - hosts:
    - grafana.mnt.com
    secretName: jsmnt-dev-tls
  rules:
  - host: grafana.mnt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-grafana
            port:
              number: 80
