Azure init/ManualDeployApp/jsmnt-ingress-certmanager-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsmnt-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-dev"

spec:
  tls:
  - hosts:
    - jsmnt-dev.westeurope.cloudapp.azure.com
    secretName: jsmnt-dev-tls
  rules:
  - host: jsmnt-dev.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jsmnt-service
            port:
              number: 80
