Azure init/ManualDeployApp/jsmnt-ingress-k8s-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsmnt-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  tls:
  - hosts:
     - mntjsdev.com
    secretName: dev-tls-secret
  rules:
    - host: mntjsdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jsmnt-service
                port: 
                  number: 80
