Azure init/ManualDeployApp/prometheus-ingress-certmanager-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-dev"

spec:
  tls:
  - hosts:
    - prom.mnt.com
    secretName: jsmnt-dev-tls
  rules:
  - host: prom.mnt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-kube-prometheus-sta-prometheus
            port:
              number: 9090
