Azure init/ManualDeployApp/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
    - host: prom.mnt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-kube-prometheus-sta-prometheus
                port: 
                  number: 80
